Lagt til tilskuddsperioder i data til prosess